ajout des pages projets.html et projets.css

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         
                 </div>
             </div>
-            <a href="#" class="btn">voir plus</a>
+            <a href="projets.html" class="btn">voir plus</a>
         </div>
      </div>
 
