mise à jour du 07/10/2024

--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
                 <div class="work">
                     <img src="./assets/work-1.png" alt="">
                     <div class="layer">
-                        <h3>Site Agence de communication</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, et quod reprehenderit laudantium eos rem in.</p>
+                        <h3>Landing page - Le RESTO</h3>
+                        <p>Présentation de la page d'accueil d'un site pour un restaurant</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="./assets/work-2.png" alt="">
                     <div class="layer">
-                        <h3>Landing page RESTO</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, et quod reprehenderit laudantium eos rem in.</p>
+                        <h3>Agence de communication</h3>
+                        <p>Présentation de la page d'accueil d'un site d'agence de communication</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                        
@@ -126,7 +126,7 @@
                     <img src="./assets/work-3.png" alt="">
                     <div class="layer">
                         <h3>Ma playlist matinale</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, et quod reprehenderit laudantium eos rem in.</p>
+                        <p>Page web de musique</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                         
