--- a/projets.html
+++ b/projets.html
@@ -15,10 +15,10 @@
                 <img src="./assets/logo_joana.png" class="logo" alt="logo_joana">
                 <ul id="sidemenu">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#about">A propos</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projets">Projets</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="index.html#about">A propos</a></li>
+                    <li><a href="index.html#skills">Skills</a></li>
+                    <li><a href="index.html#projets">Projets</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -29,7 +29,7 @@
     <div id="realisation" class="realisation">
         <div class="container">
             <h1 class="sub-title">Mes réalisations</h1>
-            <p class="text-realisation">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis atque quia quis quae doloribus. Nesciunt impedit laboriosam mollitia repudiandae obcaecati enim atque, dolores qui libero reiciendis dolorem, fugiat accusamus in.</p>
+            <p class="text-realisation">Ce portfolio de mes réalisations est une vitrine de mes compétences en codage et des différents projets sur lesquels j'ai travaillé. Il a pour objectif de présenter mes créations et mon parcours en tant que développeuse.</p>
             <div class="realisation-grid">
                 <ul class="projet-filters">
                     <li class="grid-item"><a href="#" class="active">Tous les projets</a></li>
@@ -42,7 +42,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=1" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 1</h3>
+                        <h3 class="card-title">Playlist matinale</h3>
                         <p class="category">Développement web</p>
                     </div>
                     <div class="card-overlay">
@@ -53,7 +53,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=2" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 2</h3>
+                        <h3 class="card-title">Moteur de recherche</h3>
                         <p class="category">Développement web</p>
                     </div>
                     <div class="card-overlay">
@@ -63,7 +63,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=3" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 3</h3>
+                        <h3 class="card-title">Gallerie d'images</h3>
                         <p class="category">Développement web</p>
                     </div>
                     <div class="card-overlay">
@@ -73,7 +73,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=4" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 4</h3>
+                        <h3 class="card-title">Site agence de communication</h3>
                         <p class="category">Développement web</p>
                     </div>
                     <div class="card-overlay">
@@ -83,7 +83,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=5" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 5</h3>
+                        <h3 class="card-title">Calculatrice</h3>
                         <p class="category">Application</p>
                     </div>
                     <div class="card-overlay">
@@ -93,7 +93,7 @@
                 <div class="card">
                     <img src="https://picsum.photos/600/400?random=6" class="card-image" alt="">
                     <div class="card-content">
-                        <h3 class="card-title">Titre du projet 6</h3>
+                        <h3 class="card-title">Landing page - Le RESTO</h3>
                         <p class="category">Intégration</p>
                     </div>
                     <div class="card-overlay">
